force-app/main/default/objects/Budget_Recommendation__c/Budget_Recommendation__c.object-meta.xml
<CustomObject>
    <label>Budget Recommendation</label>
    <nameField>
        <label>Recommendation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>