force-app/main/default/objects/Budget_Recommendation__c/fields/Budget_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Budget_Percentage__c</fullName>
    <label>Budget Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>