force-app/main/default/objects/Budget_Recommendation__c/fields/Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Level__c</fullName>
    <label>Confidence Level</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>