force-app/main/default/objects/Budget_Recommendation__c/fields/Current_Budget__c.field-meta.xml
<CustomField>
    <fullName>Current_Budget__c</fullName>
    <label>Current Budget</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>