force-app/main/default/objects/Budget_Recommendation__c/fields/Expected_Return__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return__c</fullName>
    <label>Expected Return</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>