force-app/main/default/objects/Budget_Recommendation__c/fields/Monte_Carlo_Result__c.field-meta.xml
<CustomField>
    <fullName>Monte_Carlo_Result__c</fullName>
    <label>Monte Carlo Result</label>
    <referenceTo>Monte_Carlo_Result__c</referenceTo>
    <relationshipLabel>Budget Recommendations</relationshipLabel>
    <relationshipName>Budget_Recommendations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>