force-app/main/default/objects/Budget_Recommendation__c/fields/Recommended_Budget__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Budget__c</fullName>
    <label>Recommended Budget</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>