force-app/main/default/objects/Budget_Recommendation__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <label>Risk Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>